--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -439,7 +439,9 @@
     <Content Include="安装说明.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="更新日志\v2.4.0.515.txt" />
+    <Content Include="更新日志\v2.4.1.515.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
       <DependentUpon>LightEditorForm.cs</DependentUpon>
     </EmbeddedResource>
