--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -448,7 +448,7 @@
     <Content Include="安装说明.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="更新日志\v2.4.3.520.txt">
+    <Content Include="更新日志\v2.4.4.520beta.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
