《灯控》#基本处理预览时的按键可用性；#修复了音频全部屏蔽时，预览无效的bug；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -448,7 +448,10 @@
     <Content Include="安装说明.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="更新日志\v2.4.4.520beta.txt">
+    <Content Include="更新日志\v2.5.0.521.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="更新日志\v2.4.4.520.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
