#完成《硬件更新》新连接方式的转移；#优化几次硬件重启后的提示；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -452,6 +452,7 @@
     <Content Include="更新日志\v2.4.4.520.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="更新日志\v2.6.0.529.txt" />
     <Content Include="更新日志\v2.5.2.526.txt" />
     <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
       <DependentUpon>LightEditorForm.cs</DependentUpon>
