--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="Ast\IPAst.cs" />
     <Compile Include="Common\IPHelper.cs" />
+    <Compile Include="entity\dto\ControlDeviceDTO.cs" />
     <Compile Include="multidevice\impl\DebugDmxData.cs" />
     <Compile Include="multidevice\impl\DebugDmxDataQueue.cs" />
     <Compile Include="multidevice\impl\RecodeDmxData.cs" />
