--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -452,6 +452,9 @@
     <Content Include="更新日志\v2.4.4.520.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="更新日志\v2.6.2.609.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="更新日志\v2.6.0.529.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
