--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -217,6 +217,18 @@
     <Compile Include="MyForm\LightEditor\WaySetForm.Designer.cs">
       <DependentUpon>WaySetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Multiplex\AddStepsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\AddStepsForm.Designer.cs">
+      <DependentUpon>AddStepsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\DeleteStepsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\DeleteStepsForm.Designer.cs">
+      <DependentUpon>DeleteStepsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\Multiplex\GroupForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -475,6 +487,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainFormBase.resx">
       <DependentUpon>MainFormBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Multiplex\AddStepsForm.resx">
+      <DependentUpon>AddStepsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Multiplex\DeleteStepsForm.resx">
+      <DependentUpon>DeleteStepsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\GroupForm.resx">
       <DependentUpon>GroupForm.cs</DependentUpon>
