--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -7,7 +7,7 @@ oldTools=false
 [Show]
 newMainForm=false
 useSkin=true
-testButton=true
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
