#全局设置-音频设置几个输入框字体的优化（代码也改为一劳永逸地使用模板的数据）;#更新日志

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -464,6 +464,9 @@
     <Content Include="更新日志\v2.4.4.520.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="更新日志\v2.7.0.619.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="更新日志\v2.6.8.611.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
