#添加SaUseForm的雏形；#动态生成子属性按钮组的时候，添加一层验证（if(la.SAWList == null )）;

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -194,6 +194,12 @@
     <Compile Include="MyForm\MainFormAst\LightRemarkForm.Designer.cs">
       <DependentUpon>LightRemarkForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\MainFormAst\SAUseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MainFormAst\SAUseForm.Designer.cs">
+      <DependentUpon>SAUseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MainFormInterface.cs" />
     <Compile Include="MyForm\LightEditor\Ast\SA.cs" />
     <Compile Include="MyForm\LightEditor\Ast\SAWrapper.cs" />
@@ -487,6 +493,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainFormAst\LightRemarkForm.resx">
       <DependentUpon>LightRemarkForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\MainFormAst\SAUseForm.resx">
+      <DependentUpon>SAUseForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainFormBase.resx">
       <DependentUpon>MainFormBase.cs</DependentUpon>
