--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.1.1" targetFramework="net40" />
   <package id="Castle.Core" version="1.1.0" targetFramework="net40" />
   <package id="Castle.DynamicProxy" version="2.1.0" targetFramework="net40" />
+  <package id="cef.redist.x64" version="83.3.12" targetFramework="net40" />
+  <package id="cef.redist.x86" version="83.3.12" targetFramework="net40" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" />
   <package id="FTD2XX.Net" version="1.0.14" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
