#基本完成NewMainForm常规SaPanel的改造；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -7,7 +7,7 @@ oldTools=false
 [Show]
 newMainForm=true
 useSkin=true
-testButton=true
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
