--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -203,6 +203,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon-20191029044630870.ico" />
+    <Content Include="更新日志\v2.1.3.708.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="更新日志\v2.1.2.630.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
