#更新日志放到同一个文件内；#修复网络模式预览的bug，不再重复调用开启调试模式；#clearAllData代码优化，由endView=》disConnect；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -468,25 +468,7 @@
     <Content Include="安装说明.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="更新日志\v2.5.1.525.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="更新日志\v2.4.4.520.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="更新日志\v2.7.2.701.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="更新日志\v2.7.1.620.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="更新日志\v2.6.8.611.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="更新日志\v2.6.0.529.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="更新日志\v2.5.2.526.txt">
+    <Content Include="更新日志\更新日志.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
@@ -983,9 +965,6 @@
     <None Include="使用手册.pdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Content Include="更新日志\v2.3.8.512.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="groupList.ini">
       <Generator>ResXFileCodeGenerator</Generator>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
