#使用素材，添加追加方式（插入到最后）：选择最后一步，并设置InsertMethod=Insert(枚举中添加INSERT_LAST项)；#抽离出各按键的toolTip提示文字；#groupInButton点击事件修改部分验证的代码（超过1个即可使用编组，但只有一个灯具时要退出多灯模式）；#抽象出enterMultiMode、exitMultiMode;#右击上一步、下一步，可实现跳转到首尾步的功能；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -2,10 +2,10 @@
 [SkinSet]
 skin=
 [Link]
-lightEditor=false
+lightEditor=true
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=true
 hardwareUpdateButton=true
