--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ skin=
 lightEditor=true
 oldTools=false
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=true
 testButton=true
 hardwareUpdateButton=true
