--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -227,6 +227,12 @@
     <Compile Include="MyForm\LightEditor\WaySetForm.Designer.cs">
       <DependentUpon>WaySetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Multiplex\ActionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\ActionForm.Designer.cs">
+      <DependentUpon>ActionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\Multiplex\AddStepsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -488,6 +494,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainFormBase.resx">
       <DependentUpon>MainFormBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Multiplex\ActionForm.resx">
+      <DependentUpon>ActionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\AddStepsForm.resx">
       <DependentUpon>AddStepsForm.cs</DependentUpon>
