#更新日志；+新增子属性按钮组的界面雏形；并在右键点击《多步调节》时，可弹出《多步联调》的功能；#SkinMainForm改为动态生成tdPanels及相关子控件；tdFlowLayouPanel改为单行显示，并隐藏（删除）相关的一些方法及变量；+SkinMainForm添加子属性按钮组到tdFlowPanel中；-unifyPanel中删除子属性按钮组Panel；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -257,6 +257,12 @@
     <Compile Include="MyForm\Multiplex\MultiplexForm.Designer.cs">
       <DependentUpon>MultiplexForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Multiplex\SoundMultiForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\SoundMultiForm.Designer.cs">
+      <DependentUpon>SoundMultiForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\NewMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -509,6 +515,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\MultiplexForm.resx">
       <DependentUpon>MultiplexForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Multiplex\SoundMultiForm.resx">
+      <DependentUpon>SoundMultiForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\NewMainForm.resx">
       <DependentUpon>NewMainForm.cs</DependentUpon>
