--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -2,10 +2,10 @@
 [SkinSet]
 skin=
 [Link]
-lightEditor=true
+lightEditor=false
 oldTools=false
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
