《幻彩》#更新日志显示优化，集成到同一个文件内，并直接放到根目录下；《灯控》+添加一个《新版灯库编辑器》的界面雏形；#优化部分更新日志的显示（7.729版本重复填写了，日期应该有误）；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -192,6 +192,12 @@
     <Compile Include="Ast\Entity\DB_FineTune.cs" />
     <Compile Include="Ast\Entity\CCEntity.cs" />
     <Compile Include="Ast\Entity\KeyEntity.cs" />
+    <Compile Include="MyForm\LightEditor\NewLightEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\LightEditor\NewLightEditorForm.Designer.cs">
+      <DependentUpon>NewLightEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MainFormAst\LightRemarkForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -485,6 +491,9 @@
     </Content>
     <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
       <DependentUpon>LightEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\LightEditor\NewLightEditorForm.resx">
+      <DependentUpon>NewLightEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\LightEditor\SAForm.resx">
       <DependentUpon>SAForm.cs</DependentUpon>
