--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -263,11 +263,11 @@
     <Compile Include="MyForm\Multiplex\MultiplexForm.Designer.cs">
       <DependentUpon>MultiplexForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyForm\Multiplex\SoundMultiForm.cs">
+    <Compile Include="MyForm\Multiplex\DetailMultiForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\Multiplex\SoundMultiForm.Designer.cs">
-      <DependentUpon>SoundMultiForm.cs</DependentUpon>
+    <Compile Include="MyForm\Multiplex\DetailMultiForm.Designer.cs">
+      <DependentUpon>DetailMultiForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MyForm\NewMainForm.cs">
       <SubType>Form</SubType>
@@ -525,8 +525,8 @@
     <EmbeddedResource Include="MyForm\Multiplex\MultiplexForm.resx">
       <DependentUpon>MultiplexForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MyForm\Multiplex\SoundMultiForm.resx">
-      <DependentUpon>SoundMultiForm.cs</DependentUpon>
+    <EmbeddedResource Include="MyForm\Multiplex\DetailMultiForm.resx">
+      <DependentUpon>DetailMultiForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\NewMainForm.resx">
       <DependentUpon>NewMainForm.cs</DependentUpon>
